// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyValuePair should render expanded 1`] = `
<div
  className="container"
>
  <div
    className="keyValueContainer"
  >
    <div
      className="keyLabel"
    >
      Test
    </div>
    <div
      className="valueContainer"
    >
      <input
        className="value active"
        data-test-id="testKey-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="testValue"
        readOnly={false}
        value="testValue"
      />
    </div>
  </div>
  <div
    className="ReactCollapse--collapse"
    style={
      Object {
        "height": "0px",
        "overflow": "hidden",
      }
    }
  >
    <div
      className="ReactCollapse--content"
    >
      <div
        className="containerFooter addLabel active"
        onClick={[Function]}
      >
        + Add
      </div>
    </div>
  </div>
</div>
`;

exports[`KeyValuePair should render uneditable with multiple values 1`] = `
<div
  className="container"
>
  <div
    className="keyValueContainer"
  >
    <div
      className="keyLabel"
    >
      Test
    </div>
    <div
      className="valueContainer"
    >
      <div
        className="multiValueContainer"
      >
        <div
          className="valueWrapper"
        >
          <input
            className="value"
            data-test-id="testKey-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="multiple"
            readOnly={true}
            value="multiple"
          />
        </div>
        <div
          className="valueWrapper"
        >
          <input
            className="value"
            data-test-id="testKey-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="values"
            readOnly={true}
            value="values"
          />
        </div>
        <div
          className="valueWrapper"
        >
          <input
            className="value"
            data-test-id="testKey-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="test"
            readOnly={true}
            value="test"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="ReactCollapse--collapse"
    style={
      Object {
        "height": "0px",
        "overflow": "hidden",
      }
    }
  >
    <div
      className="ReactCollapse--content"
    >
      <div
        className="containerFooter addLabel"
        onClick={[Function]}
      >
        + Add
      </div>
    </div>
  </div>
</div>
`;

exports[`KeyValuePair should render unexpanded 1`] = `
<div
  className="container"
>
  <div
    className="keyValueContainer"
  >
    <div
      className="keyLabel"
    >
      Test
    </div>
    <div
      className="valueContainer"
    >
      <input
        className="value"
        data-test-id="testKey-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="testValue"
        readOnly={true}
        value="testValue"
      />
    </div>
  </div>
  <div
    className="ReactCollapse--collapse"
    style={
      Object {
        "height": "0px",
        "overflow": "hidden",
      }
    }
  >
    <div
      className="ReactCollapse--content"
    >
      <div
        className="containerFooter addLabel"
        onClick={[Function]}
      >
        + Add
      </div>
    </div>
  </div>
</div>
`;
